--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,12 +13,12 @@ body{
   display: grid;
   place-items: center;
   text-align: center;
-  background: #f3f4f5;
+  background: #f3d8f1;
 }
 
 .content{
   width: 330px;
-  background: #f3f4f5;
+  background: #f3d8f1;
   border-radius: 10px;
   padding: 40px 30px;
   box-shadow: -3px -3px 7px 5px #ffffff73,
@@ -47,13 +47,14 @@ body{
   outline: none;
   border: none;
   color: #595959;
-  background: #f3f4f5;
+  background: #f3d8f1;
   border-radius: 25px;
   box-shadow: inset 2px 2px 5px #babecc,
               inset -5px -5px 10px #ffffff73;
 }
 
 .field input:focus ~ label{
+  background: #f3d8f1;
   box-shadow: inset 2px 2px 5px #babecc,
               inset -1px -1px 2px #ffffff73;
 }
@@ -69,12 +70,13 @@ body{
 
 .field textarea {
   width: 100%;
+  height: 100px;
   padding: 15px 0 0 15px;
   font-size: 18px;
   outline: none;
   border: none;
   color: #595959;
-  background: #f3f4f5;
+  background: #f3d8f1;
   border-radius: 25px;
   box-shadow: inset 2px 2px 5px #babecc,
               inset -5px -5px 10px #ffffff73;
@@ -88,11 +90,11 @@ body{
 button{
   margin: 25px 0 0 0;
   width: 100%;
-  height: 50px;
+  height: 45px;
   color: rgb(85, 84, 84);
   font-size: 18px;
   font-weight: 600;
-  background: #f3f4f5;
+  background: #f3d8f1;
   border: none;
   outline: none;
   cursor: pointer;
@@ -102,7 +104,8 @@ button{
 }
 
 button:focus{
-  color: #8276eb;
+  color: #74037e;
+  background: #cac8ca;
   box-shadow: inset 2px 2px 5px #babecc,
               inset -5px -5px 10px #ffffff73;
 }
