--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,6 @@ html,body{
 body{
   display: grid;
   place-items: center;
-  text-align: center;
   background: #f3d8f1;
 }
 
@@ -25,22 +24,19 @@ body{
               2px 2px 5px 3px rgba(118, 118, 119, 0.288);
 }
 
-
-.content .text{
-  font-size: 25px;
-  font-weight: 600;
-  margin-bottom: 35px;
-  color: #000;
-}
-
 .content .field{
   height: 100%;
   width: 100%;
 }
 
+.field h3 {
+  margin-bottom: 10px;
+}
+
 .field input{
   height: 7vh;
   width: 100%;
+  margin-top: 10px;
   padding-left: 15px;
   font-size: 18px;
   margin-bottom: 20px;
@@ -64,6 +60,8 @@ body{
 }
 
 .field label{
+  font-weight: 700;
+  text-align: start;
   pointer-events: none;
   color: #666666;
 }
@@ -72,6 +70,7 @@ body{
   width: 100%;
   height: 100px;
   padding: 15px 0 0 15px;
+  margin-top: 15px;
   font-size: 18px;
   outline: none;
   border: none;
